# IS-2022-prog-2-sem

./: README.md
lab1/lab1.1/: CMakeLists.txt  Figures.cpp  Figures.h  main.cpp
lab1/lab1.2/: CMakeLists.txt  Polynomial.h  main.cpp  polinom.h  polynomial.cpp
lab3/3.1/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  Iterator.cpp  Iterator.h  main.cpp
lab3/3.2/: 3.2.rar  Algorithms.h  CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  ICube.cpp  ICube.h  RubiksCube.cpp  RubiksCube.h  main.cpp
lab5/: CMakeLists.txt  CustomAllocator.cpp  CustomAllocator.h  main.cpp  shared_pointer.h
lab6/: CMakeLists.txt  Polynomial.cpp  Polynomial.h  main.cpp  test.cpp
